--- a/.air.toml
+++ b/.air.toml
@@ -1,28 +1,30 @@
+# Air configuration for hot reload development
 root = "."
 testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./tmp/main"
-  cmd = "go build -o ./tmp/main -buildvcs=false ."
+  bin = ""
+  cmd = "go build -o ./tmp/main ."
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata", ".git", "node_modules", ".vscode", ".idea"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
-  exclude_pattern = ["_test.go"]
-  exclude_regex = ["_test.go"]
-  exclude_unchanged = true
+  exclude_pattern = ["*.so", "*.sqlc.go"]
+  exclude_regex = ["_test\\.go"]
+  exclude_unchanged = false
   full_bin = ""
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html"]
   include_file = []
-  kill_delay = "1s"
+  include_regex = []
+  kill_delay = "0s"
   log = "build-errors.log"
   poll = false
   poll_interval = 0
   rerun = false
   rerun_delay = 500
-  send_interrupt = true
+  send_interrupt = false
   stop_on_error = false
 
 [color]
