feat(api-docs): Add API documentation service with Swagger UI integration
- Created a new API documentation service using Gin framework.
- Implemented routes for health check, service status, and Swagger UI proxy.
- Added CORS middleware for cross-origin requests.
- Integrated service documentation for multiple microservices.
- Set up dynamic proxying for Swagger assets and initialization scripts.
- Configured Nginx to handle API documentation routing and service mapping.

feat(organization): Enhance organization service with Swagger documentation

- Added Swagger annotations to create and get organization handlers.
- Registered Swagger UI route in the organization module.
- Updated main.go to include Swagger API documentation metadata.

chore(nginx): Update Nginx configuration for API documentation

- Added dynamic DNS resolution for service names.
- Configured Nginx to proxy requests to the new API documentation service.
- Set up routes for serving Swagger UI and assets.

chore(ssl): Add SSL certificate and key for secure communication

- Included self-signed SSL certificate and private key for local development.

feat(shared): Create shared Swagger setup utility

- Implemented a utility function to register Swagger UI routes in Gin.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -483,6 +483,45 @@ services:
       start_period: 40s
 
   # ============================================================
+  # API DOCUMENTATION SERVICE
+  # ============================================================
+
+  api-docs-service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        MODULE_NAME: api-docs
+    container_name: pulzifi-api-docs
+    restart: unless-stopped
+    environment:
+      MODULE_NAME: api-docs
+      HTTP_PORT: 9000
+    env_file:
+      - .env
+    ports:
+      - "9000:9000"
+    depends_on:
+      - organization-service
+      - workspace-service
+      - page-service
+      - alert-service
+      - monitoring-service
+      - insight-service
+      - report-service
+      - integration-service
+      - usage-service
+      - auth-service
+    networks:
+      - pulzifi-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  # ============================================================
   # REVERSE PROXY / API GATEWAY
   # ============================================================
 
@@ -507,6 +546,7 @@ services:
       - report-service
       - integration-service
       - usage-service
+      - api-docs-service
     networks:
       - pulzifi-network
     healthcheck:
