--- a/nginx.conf
+++ b/nginx.conf
@@ -41,6 +41,39 @@ http {
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=100r/s;
     limit_req_zone $http_x_tenant zone=tenant_limit:10m rate=1000r/s;
 
+    # Enable dynamic DNS resolution (Docker DNS)
+    resolver 127.0.0.11:53 valid=10s;
+    resolver_timeout 5s;
+
+    # Map service names to hostnames and ports
+    map $service_name_upper $service_host {
+        "Auth"        "pulzifi-auth";
+        "Organization" "pulzifi-organization";
+        "Workspace"   "pulzifi-workspace";
+        "Page"        "pulzifi-page";
+        "Alert"       "pulzifi-alert";
+        "Monitoring"  "pulzifi-monitoring";
+        "Insight"     "pulzifi-insight";
+        "Report"      "pulzifi-report";
+        "Integration" "pulzifi-integration";
+        "Usage"       "pulzifi-usage";
+        default       "pulzifi-organization";
+    }
+
+    map $service_name_upper $service_port {
+        "Auth"        "8081";
+        "Organization" "8082";
+        "Workspace"   "8083";
+        "Page"        "8084";
+        "Alert"       "8085";
+        "Monitoring"  "8086";
+        "Insight"     "8087";
+        "Report"      "8098";
+        "Integration" "8089";
+        "Usage"       "8090";
+        default       "8082";
+    }
+
     # Upstream services
     upstream auth_service {
         server pulzifi-auth:8081;
@@ -80,6 +113,10 @@ http {
 
     upstream usage_service {
         server pulzifi-usage:8090;
+    }
+
+    upstream api_docs_service {
+        server pulzifi-api-docs:9000;
     }
 
     # ============================================================
@@ -136,6 +173,59 @@ http {
             access_log off;
             return 200 "OK\n";
             add_header Content-Type text/plain;
+        }
+
+        # ========================================
+        # API Documentation (Swagger UI)
+        # ========================================
+        location /api/docs/ {
+            proxy_pass http://api_docs_service/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Path /api/docs;
+            proxy_redirect ~^/ /api/docs/;
+        }
+
+        location = /api/docs {
+            return 301 $scheme://$host/api/docs/;
+        }
+
+        # ========================================
+        # Swagger Assets Proxy (for all services)
+        # Dynamic proxy using variables for DNS resolution
+        # ========================================
+        location ~ ^/api/docs/swagger-assets/([A-Za-z]+)/swagger-initializer\.js$ {
+            set $service_name_upper $1;
+            proxy_pass http://$service_host:$service_port/swagger/swagger-initializer.js;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Rewrite the relative doc.json URL to absolute path
+            sub_filter 'url: "doc.json"' 'url: "/api/docs/swagger-assets/$service_name_upper/doc.json"';
+            sub_filter_types application/javascript;
+            sub_filter_once on;
+        }
+        
+        location ~ ^/api/docs/swagger-assets/([A-Za-z]+)/(.*)$ {
+            set $service_name_upper $1;
+            set $path_suffix $2;
+            
+            # Use maps to get hostname and port
+            # (maps are defined in http block above)
+            
+            # Forward to upstream service using variable (forces DNS resolution)
+            proxy_pass http://$service_host:$service_port/swagger/$path_suffix;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # ========================================
