feat: Implement Page and Workspace modules with PostgreSQL persistence
- Added PagePostgresRepository for managing pages in PostgreSQL.
- Implemented CRUD operations for pages including Create, GetByID, ListByWorkspace, Update, and Delete.
- Created HTTP module for Report with routes for creating, listing, and retrieving reports.
- Developed HTTP module for Usage with metrics and quotas endpoints.
- Introduced Workspace entity and repository with PostgreSQL persistence.
- Implemented CRUD operations for workspaces including Create, GetByID, ListByCreator, Update, and Delete.
- Added middleware for tenant extraction and context management.
- Created response helper for standardized HTTP responses.
- Integrated Swagger documentation generation and setup for API documentation.
- Added scripts for database initialization and hot reload during development.

--- a/.air.toml
+++ b/.air.toml
@@ -5,8 +5,8 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = ""
-  cmd = "go build -o ./tmp/main ."
+  bin = "bin/pulzifi-monolith"
+  cmd = "go build -o ./bin/pulzifi-monolith ./cmd/server/"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
