--- a/docker-compose.monolith.yml
+++ b/docker-compose.monolith.yml
@@ -1,8 +1,5 @@
-# ============================================================
-# Docker Compose for Pulzifi Backend MONOLITH
-# Minimal setup: PostgreSQL 17, Redis 7
-# All services run in single Go process on port 8080
-# ============================================================
+# Docker Compose for Monolith Development
+# Provides: PostgreSQL 17, Redis 7, Monolith with hot reload
 
 networks:
   pulzifi-network:
@@ -15,42 +12,14 @@ volumes:
     driver: local
 
 services:
-  monolith:
-    build:
-      context: .
-      dockerfile: Dockerfile.monolith
-    container_name: pulzifi-monolith
-    restart: unless-stopped
-    environment:
-      DB_HOST: postgres
-      DB_USER: ${DB_USER:-pulzifi_user}
-      DB_PASSWORD: ${DB_PASSWORD:-pulzifi_password}
-      DB_NAME: ${DB_NAME:-pulzifi}
-      REDIS_HOST: redis
-      REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password}
-      HTTP_PORT: 8080
-      ENVIRONMENT: ${ENVIRONMENT:-development}
-    env_file:
-      - .env
-    ports:
-      - "8080:8080"
-    depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    networks:
-      - pulzifi-network
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
-      interval: 30s
-      timeout: 3s
-      retries: 3
-      start_period: 10s
+
+  # ============================================================
+  # DATABASE SERVICES
+  # ============================================================
 
   postgres:
     image: postgres:17-alpine
-    container_name: pulzifi-postgres
+    container_name: pulzifi-postgres-monolith
     restart: unless-stopped
     environment:
       POSTGRES_DB: ${DB_NAME:-pulzifi}
@@ -58,23 +27,23 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD:-pulzifi_password}
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=en_US.UTF-8 --lc-ctype=en_US.UTF-8"
     ports:
-      - "5434:5432"
+      - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+      - ./database_setup.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
+      - ./shared/database/migrations:/docker-entrypoint-initdb.d/migrations:ro
     networks:
       - pulzifi-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-pulzifi_user} -d ${DB_NAME:-pulzifi}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-pulzifi_user}"]
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 30s
 
   redis:
     image: redis:7-alpine
-    container_name: pulzifi-redis
+    container_name: pulzifi-redis-monolith
     restart: unless-stopped
-    command: redis-server --requirepass ${REDIS_PASSWORD:-redis_password} --appendonly yes
     ports:
       - "6379:6379"
     volumes:
@@ -82,7 +51,44 @@ services:
     networks:
       - pulzifi-network
     healthcheck:
-      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 10s
-      timeout: 3s
+      timeout: 5s
       retries: 5
+
+  # ============================================================
+  # MONOLITH APPLICATION
+  # ============================================================
+
+  monolith:
+    image: pulzifi-monolith:latest
+    container_name: pulzifi-monolith
+    restart: unless-stopped
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    environment:
+      HTTP_PORT: 8080
+      DB_HOST: postgres
+      DB_USER: ${DB_USER:-pulzifi_user}
+      DB_PASSWORD: ${DB_PASSWORD:-pulzifi_password}
+      DB_NAME: ${DB_NAME:-pulzifi}
+      REDIS_HOST: redis
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password}
+      ENVIRONMENT: development
+    env_file:
+      - .env
+    ports:
+      - "8080:8080"
+    volumes:
+      - .:/workspace
+    networks:
+      - pulzifi-network
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
