feat(auth): implement multi-tenant authentication and session management
- Add tenant support to auth module with extended session types
- Create new @workspace/auth package for shared auth utilities
- Implement Redis-based token caching and refresh token handling
- Add auth guard and session validation middleware
- Update login/logout flows to handle tenant subdomains
- Refactor token provider and HTTP client integration
- Add breadcrumb navigation and workspace layout components
- Implement response logging and error handling middleware
- Update API services to support tenant-aware requests

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
+    "start": "turbo start",
     "lint": "biome lint .",
     "lint:fix": "biome lint --write .",
     "format": "biome format --write .",
