--- a/docker-compose.monolith.yml
+++ b/docker-compose.monolith.yml
@@ -92,3 +92,27 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+
+  # ============================================================
+  # NGINX REVERSE PROXY
+  # ============================================================
+
+  nginx:
+    image: nginx:1.25-alpine
+    container_name: pulzifi-nginx
+    restart: unless-stopped
+    depends_on:
+      - monolith
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.monolith.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro
+    networks:
+      - pulzifi-network
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
