--- a/frontend/apps/web/package.json
+++ b/frontend/apps/web/package.json
@@ -11,6 +11,7 @@
     "format": "biome format ../../ --write"
   },
   "dependencies": {
+    "@workspace/auth": "workspace:*",
     "@workspace/services": "workspace:*",
     "@workspace/shared-http": "workspace:*",
     "@workspace/ui": "workspace:*",
