--- a/nginx.conf
+++ b/nginx.conf
@@ -250,7 +250,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Tenant $http_x_tenant;
+            proxy_set_header X-Tenant $final_tenant;
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
@@ -268,7 +268,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Tenant $http_x_tenant;
+            proxy_set_header X-Tenant $final_tenant;
             proxy_set_header Authorization $http_authorization;
         }
 
@@ -284,7 +284,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Tenant $http_x_tenant;
+            proxy_set_header X-Tenant $final_tenant;
             proxy_set_header Authorization $http_authorization;
         }
 
@@ -300,7 +300,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Tenant $http_x_tenant;
+            proxy_set_header X-Tenant $final_tenant;
             proxy_set_header Authorization $http_authorization;
         }
 
@@ -318,7 +318,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Tenant $http_x_tenant;
+            proxy_set_header X-Tenant $final_tenant;
             proxy_set_header Authorization $http_authorization;
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
@@ -337,7 +337,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Tenant $http_x_tenant;
+            proxy_set_header X-Tenant $final_tenant;
             proxy_set_header Authorization $http_authorization;
         }
 
@@ -353,7 +353,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Tenant $http_x_tenant;
+            proxy_set_header X-Tenant $final_tenant;
             proxy_set_header Authorization $http_authorization;
         }
 
@@ -369,7 +369,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Tenant $http_x_tenant;
+            proxy_set_header X-Tenant $final_tenant;
             proxy_set_header Authorization $http_authorization;
         }
 
@@ -385,7 +385,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Tenant $http_x_tenant;
+            proxy_set_header X-Tenant $final_tenant;
             proxy_set_header Authorization $http_authorization;
         }
 
@@ -401,7 +401,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Tenant $http_x_tenant;
+            proxy_set_header X-Tenant $final_tenant;
             proxy_set_header Authorization $http_authorization;
         }
 
