feat(auth): implement improved token refresh and session handling
- Add expiresIn to ExtendedUser interface and JWT handling
- Implement pending refresh map to prevent race conditions
- Update auth config to use proper token expiration times
- Replace SessionProvider with ValidatedSessionProvider
- Clean up auth lock implementation and use native NextAuth
- Add documentation for cookie-based authentication
- Update development setup instructions

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,7 @@ KAFKA_SECURITY_PROTOCOL=PLAINTEXT
 # JWT & AUTH
 # ============================================================
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
+# Token expiration in seconds
 JWT_EXPIRATION=3600
 JWT_REFRESH_EXPIRATION=604800
 
