feat(auth): add cookie domain configuration for auth cookies
Add COOKIE_DOMAIN environment variable to configure cookie domain for auth cookies
Update auth module to pass cookie domain to cookie handlers
Simplify frontend domain handling logic for local development
Update local domain setup script to use pulzifi.local domain

--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,7 @@ JWT_SECRET=your-super-secret-jwt-key-change-in-production
 # Token expiration in seconds
 JWT_EXPIRATION=3600
 JWT_REFRESH_EXPIRATION=604800
+COOKIE_DOMAIN=.pulzifi.local
 
 # ============================================================
 # SERVER CONFIGURATION
