--- a/.env.example
+++ b/.env.example
@@ -77,6 +77,16 @@ SENTRY_DSN=
 DATADOG_API_KEY=
 
 # ============================================================
+# STORAGE (MinIO / S3)
+# ============================================================
+MINIO_ENDPOINT=minio:9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=pulzifi-snapshots
+MINIO_USE_SSL=false
+MINIO_PUBLIC_URL=http://localhost:9000
+
+# ============================================================
 # FEATURE FLAGS
 # ============================================================
 ENABLE_EMAIL_NOTIFICATIONS=true
