--- a/frontend/packages/auth/tsconfig.json
+++ b/frontend/packages/auth/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@workspace/typescript-config/base.json",
   "compilerOptions": {
+    "incremental": true,
     "composite": true,
     "outDir": "./dist",
     "rootDir": "./src"
