Add server certificate and private key for testing, and include service catalog pickle
- Added server.test.pem.crt containing the server certificate.
- Added server.test.pem.key containing the private key for the server.
- Introduced service-catalog-3_0_2-1_32_5.pickle for service catalog data.

--- a/.env.example
+++ b/.env.example
@@ -77,14 +77,14 @@ SENTRY_DSN=
 DATADOG_API_KEY=
 
 # ============================================================
-# STORAGE (MinIO / S3)
+# STORAGE (LocalStack / S3)
 # ============================================================
-MINIO_ENDPOINT=minio:9000
-MINIO_ACCESS_KEY=minioadmin
-MINIO_SECRET_KEY=minioadmin
+MINIO_ENDPOINT=localstack:4566
+MINIO_ACCESS_KEY=test
+MINIO_SECRET_KEY=test
 MINIO_BUCKET=pulzifi-snapshots
 MINIO_USE_SSL=false
-MINIO_PUBLIC_URL=http://localhost:9000
+MINIO_PUBLIC_URL=http://localhost:4566
 
 # ============================================================
 # FEATURE FLAGS
