--- a/docker-compose.monolith.yml
+++ b/docker-compose.monolith.yml
@@ -10,12 +10,6 @@ volumes:
     driver: local
   redis-data:
     driver: local
-  kafka-data:
-    driver: local
-  zookeeper-data:
-    driver: local
-  minio-data:
-    driver: local
 
 services:
 
@@ -62,72 +56,24 @@ services:
   #     timeout: 5s
   #     retries: 5
 
-  # ============================================================
-  # INFRASTRUCTURE SERVICES
-  # ============================================================
-
-  # zookeeper:
-  #   image: confluentinc/cp-zookeeper:7.5.1
-  #   container_name: pulzifi-zookeeper
-  #   restart: unless-stopped
-  #   environment:
-  #     ZOOKEEPER_CLIENT_PORT: 2181
-  #     ZOOKEEPER_TICK_TIME: 2000
-  #   volumes:
-  #     - zookeeper-data:/var/lib/zookeeper/data
-  #   networks:
-  #     - pulzifi-network
-
-  # kafka:
-  #   image: confluentinc/cp-kafka:7.5.1
-  #   container_name: pulzifi-kafka
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - zookeeper
-  #   ports:
-  #     - "9092:9092"
-  #     - "29092:29092"
-  #   environment:
-  #     KAFKA_BROKER_ID: 1
-  #     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-  #     KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-  #     KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-  #     KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-  #     KAFKA_AUTO_CREATE_TOPICS_ENABLE: true
-  #     KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-  #   volumes:
-  #     - kafka-data:/var/lib/kafka/data
-  #   networks:
-  #     - pulzifi-network
-  #   healthcheck:
-  #     test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 5
-  #     start_period: 30s
-
-  minio:
-    image: minio/minio
-    container_name: pulzifi-minio
-    restart: unless-stopped
-    command: server /data --console-address ":9001"
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY:-minioadmin}
-      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY:-minioadmin}
+  localstack:
+    image: localstack/localstack:3.0
+    container_name: pulzifi-localstack
     ports:
-      - "9000:9000"
-      - "9002:9001"
+      - "4566:4566"
+    environment:
+      - SERVICES=s3
+      - DEBUG=1
+      - DOCKER_HOST=unix:///var/run/docker.sock
     volumes:
-      - minio-data:/data
+      - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - pulzifi-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: ["CMD", "curl", "-f", "http://localhost:4566/_localstack/health"]
       interval: 30s
-      timeout: 20s
+      timeout: 10s
       retries: 3
 
   extractor:
@@ -161,9 +107,7 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      # kafka:
-      #   condition: service_healthy
-      minio:
+      localstack:
         condition: service_healthy
       extractor:
         condition: service_healthy
@@ -174,13 +118,12 @@ services:
       DB_PASSWORD: ${DB_PASSWORD:-pulzifi_password}
       DB_NAME: ${DB_NAME:-pulzifi}
       # REDIS_HOST: pulzifi-redis-monolith
-      # KAFKA_BROKERS: kafka:29092
-      MINIO_ENDPOINT: minio:9000
-      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY:-minioadmin}
-      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY:-minioadmin}
+      MINIO_ENDPOINT: localstack:4566
+      MINIO_ACCESS_KEY: test
+      MINIO_SECRET_KEY: test
       MINIO_BUCKET: ${MINIO_BUCKET:-pulzifi-snapshots}
       MINIO_USE_SSL: ${MINIO_USE_SSL:-false}
-      MINIO_PUBLIC_URL: http://localhost:9000
+      MINIO_PUBLIC_URL: http://localhost:4566
       EXTRACTOR_URL: http://extractor:3000
       # REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password}
       ENVIRONMENT: development
@@ -211,7 +154,7 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      minio:
+      localstack:
         condition: service_healthy
       extractor:
         condition: service_healthy
@@ -221,9 +164,9 @@ services:
       DB_PASSWORD: ${DB_PASSWORD:-pulzifi_password}
       DB_NAME: ${DB_NAME:-pulzifi}
       # REDIS_HOST: pulzifi-redis-monolith
-      MINIO_ENDPOINT: minio:9000
-      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY:-minioadmin}
-      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY:-minioadmin}
+      MINIO_ENDPOINT: localstack:4566
+      MINIO_ACCESS_KEY: test
+      MINIO_SECRET_KEY: test
       MINIO_BUCKET: ${MINIO_BUCKET:-pulzifi-snapshots}
       MINIO_USE_SSL: ${MINIO_USE_SSL:-false}
       EXTRACTOR_URL: http://extractor:3000
