--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,6 @@ volumes:
     driver: local
   zookeeper-data:
     driver: local
-  minio-data:
-    driver: local
 
 # ============================================================
 # SERVICES
@@ -75,25 +73,24 @@ services:
       timeout: 3s
       retries: 5
 
-  minio:
-    image: minio/minio
-    container_name: pulzifi-minio
-    restart: unless-stopped
-    command: server /data --console-address ":9001"
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY:-minioadmin}
-      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY:-minioadmin}
+  localstack:
+    image: localstack/localstack:3.0
+    container_name: pulzifi-localstack
     ports:
-      - "9000:9000"
-      - "9002:9001"
+      - "4566:4566"
+    environment:
+      - SERVICES=s3
+      - DEBUG=1
+      - DOCKER_HOST=unix:///var/run/docker.sock
     volumes:
-      - minio-data:/data
+      - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - pulzifi-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: ["CMD", "curl", "-f", "http://localhost:4566/_localstack/health"]
       interval: 30s
-      timeout: 20s
+      timeout: 10s
       retries: 3
 
   # ============================================================
@@ -533,9 +530,9 @@ services:
     environment:
       MODULE_NAME: snapshot
       KAFKA_BROKERS: kafka:29092
-      MINIO_ENDPOINT: minio:9000
-      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY:-minioadmin}
-      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY:-minioadmin}
+      MINIO_ENDPOINT: localstack:4566
+      MINIO_ACCESS_KEY: test
+      MINIO_SECRET_KEY: test
       MINIO_BUCKET: ${MINIO_BUCKET:-pulzifi-snapshots}
       MINIO_USE_SSL: ${MINIO_USE_SSL:-false}
       EXTRACTOR_URL: http://extractor-service:3000
@@ -544,7 +541,7 @@ services:
     depends_on:
       kafka:
         condition: service_healthy
-      minio:
+      localstack:
         condition: service_healthy
       extractor-service:
         condition: service_healthy
