refactor: reorganize imports and improve code structure across multiple files
- Updated import statements for better readability and consistency in `use-workspaces.ts`, `index.ts`, and various dialog components.
- Removed unused variables and comments in `index.ts`.
- Enhanced error handling in `page-api.ts` for better debugging.
- Refactored `biome.json` to enable organized imports and added linter overrides for specific files.
- Improved type definitions and error handling in `auth-api.ts`, `super-admin-api.ts`, and `page-api.ts`.
- Cleaned up component files in the UI library by reordering imports and ensuring consistent usage of React types.
- Updated the `index.ts` file in the UI library to reflect changes in component exports and improve organization.

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -1,5 +1,13 @@
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+  "assist": {
+    "enabled": true,
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
+  },
   "linter": {
     "enabled": true,
     "rules": {
@@ -34,6 +42,35 @@
       "trailingCommas": "none"
     }
   },
+  "overrides": [
+    {
+      "includes": ["**/features/changes-view/ui/text-changes.tsx"],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noArrayIndexKey": "off"
+          }
+        }
+      }
+    },
+    {
+      "includes": ["**/app/(demo)/**"],
+      "linter": {
+        "rules": {
+          "a11y": {
+            "useValidAnchor": "off"
+          },
+          "suspicious": {
+            "noArrayIndexKey": "off"
+          },
+          "correctness": {
+            "useExhaustiveDependencies": "off",
+            "useUniqueElementIds": "off"
+          }
+        }
+      }
+    }
+  ],
   "files": {
     "ignoreUnknown": true,
     "includes": [
