--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "dev": "turbo dev",
     "build": "turbo build",
     "start": "turbo start",
+    "check": "biome check --write .",
     "lint": "biome lint .",
     "lint:fix": "biome lint --write .",
     "format": "biome format --write .",
