--- a/.env.example
+++ b/.env.example
@@ -42,13 +42,17 @@ JWT_SECRET=your-super-secret-jwt-key-change-in-production
 # Token expiration in seconds
 JWT_EXPIRATION=3600
 JWT_REFRESH_EXPIRATION=604800
-COOKIE_DOMAIN=.pulzifi.local
+# Subdomain cookie sharing: leading dot makes it valid for all subdomains
+# Dev: localhost | Production: .pulzifi.com
+COOKIE_DOMAIN=localhost
 
 # ============================================================
 # SERVER CONFIGURATION
 # ============================================================
 HTTP_PORT=9090
 GRPC_PORT=9000
+# Dev: http://localhost:3000 | Production: https://pulzifi.com
+FRONTEND_URL=http://localhost:3000
 
 # ============================================================
 # EXTERNAL SERVICES
@@ -96,7 +100,8 @@ ENABLE_AI_INSIGHTS=true
 # ============================================================
 # CORS CONFIGURATION
 # ============================================================
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+# Dev: localhost subdomains | Production: https://*.pulzifi.com,https://pulzifi.com
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://*.localhost:3000,http://localhost:3001
 CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
 CORS_ALLOWED_HEADERS=Content-Type,Authorization,X-Tenant
 
